--- a/images.html
+++ b/images.html
@@ -38,16 +38,20 @@
         <div class="menu-options">
 
         <!-- Content menu -->
-            <ul class="content-menu">
-                <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
-                </div>
-                <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link active font-color"><a class="link font-color" href="/images.html">Images</a></li>
-                </div>
-            </ul>
+        <ul class="content-menu">
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link"><a class="link font-color" href="/video-work.html">VIDEOS</a></li>
+            </div>
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">VISUALIZERS</a></li>
+            </div>
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link font-color"><a class="link active font-color" href="/images.html">IMAGESS</a></li>
+            </div>
+        </ul>
 
         <!-- Social menu -->
             <ul class="social-menu">
@@ -66,24 +70,19 @@
             </ul>
         </div>
    </section>
-   <div id="image-content">
-        <!-- <div class="sticky-top">
-            <h2 class="content-heading font-color">Images</h2>
-            <div class="content-dashed-line"></div>
-        </div> -->
-        <div id="content">
-            <!-- <p class="desc font-color">Disposable camera images are shifted and twisted around as they are scanned, creating warped and elongated shapes.  </p> -->
-            <img src="/assets/images/scanned-img/me-1.jpeg" alt="">
-            <img src="./assets/images/scanned-img/flower-1.jpg" alt="distorted pink flowers">
-            <img src="/assets/images/scanned-img/plant.jpeg" alt="">
-            <img src="./assets/images/scanned-img/cake.jpeg" alt="">
-            <img src="./assets/images/scanned-img/cottage-1.jpeg" alt="">
-            <img src="./assets/images/scanned-img/pond.jpeg" alt="">
-            <img src="./assets/images/scanned-img/ryan-2.jpg" alt="">
-            <img src="./assets/images/scanned-img/tree-1.jpg" alt="">
-            <img src="./assets/images/scanned-img/ryan-1.jpeg" alt="">
-            <img src="./assets/images/scanned-img/tree-2.jpg" alt="">
-        </div>
-   </div>
+
+<!-- Page Body -->
+   <section id="image-content">
+        <img src="/assets/images/scanned-img/me-1.jpeg" alt="">
+        <img src="./assets/images/scanned-img/flower-1.jpg" alt="distorted pink flowers">
+        <img src="/assets/images/scanned-img/plant.jpeg" alt="">
+        <img src="./assets/images/scanned-img/cake.jpeg" alt="">
+        <img src="./assets/images/scanned-img/cottage-1.jpeg" alt="">
+        <img src="./assets/images/scanned-img/pond.jpeg" alt="">
+        <img src="./assets/images/scanned-img/ryan-2.jpg" alt="">
+        <img src="./assets/images/scanned-img/tree-1.jpg" alt="">
+        <img src="./assets/images/scanned-img/ryan-1.jpeg" alt="">
+        <img src="./assets/images/scanned-img/tree-2.jpg" alt="">
+    </section>
 </body>
 </html>
