--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <!-- Page Body -->
     <section id="content-top">
         <div class="landing">
-            <img class="landing-img" src="./assets/images/project-gifs/video-game.gif" alt="">
+            <img class="landing-img" src="./assets/images/project-gifs/video-game.gif" alt="square shapes flashing across the screen">
         </div>
     </section>
 
