--- a/touchdesignr.html
+++ b/touchdesignr.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-    <title>FREDO TDESIGNRR</title>
+    <title>FREDO VVIDEOO</title>
 </head>
 <body>
 <!-- Navigation section -->
@@ -41,11 +41,15 @@
             <ul class="content-menu">
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
+                    <li class="link"><a class="link font-color" href="/video-work.html">VIDEOS</a></li>
                 </div>
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
+                    <li class="link font-color"><a class="link active font-color" href="/touchdesignr.html">VISUALIZERSS</a></li>
+                </div>
+                <div class="nav-link">
+                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                    <li class="link font-color"><a class="link font-color" href="/images.html">IMAGES</a></li>
                 </div>
             </ul>
 
@@ -66,48 +70,29 @@
             </ul>
         </div>
    </section>
+
+   <!-- Page Body -->
     <div id="content-top">
-        <div class="content-dashed-line mobile-only"></div>
-        <div class="mid-menu">
-            <div class="vid-menu-one">
-                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-inactive">Visualizers</a>
+
+        <!-- Project 1 -->
+        <div id="td-collection">
+            <div class="td-projects">
+                <img class="td-img" src="./assets/images/project-gifs/black-river.gif" alt="">
+                <h3 class="font-color">dark river</h3>
             </div>
-            <div class="vid-menu-one ">
-                <a href="freelance.html" class="sub-menu content-heading font-color vid-menu-inactive">freelance</a>
+            <div class="td-projects">
+                <img class="td-img" src="./assets/images/project-gifs/bloom.gif" alt="">
+                <h3 class="font-color">bloom feedback</h3>
             </div>
-            <div class="vid-menu-one">
-                <a href="touchdesignr.html" class="sub-menu content-heading font-color vid-menu-active">touchdesigner proj</a>
+            <div class="td-projects">
+                <img class="td-img" src="./assets/images/project-gifs/clementines.gif" alt="">
+                <h3 class="font-color">clementines</h3>
+            </div>
+            <div class="td-projects">
+                <img class="td-img" src="./assets/images/project-gifs/liquor-n-vinyl.gif" alt="">
+                <h3 class="font-color">vnyl</h3>
             </div>
         </div>
-        <div class="content-dashed-line"></div>
-        <div id="content">
-            <div id="visualizers">
-                <div class="td-projects">
-                    <div class="td-img">
-                        <img class="td-img" src="./assets/images/project-gifs/black-river.gif" alt="">
-                    </div>
-                    <h3 class="font-color">dark river</h3>
-                </div>
-                <div class="td-projects">
-                    <div class="td-img">
-                        <img class="td-img" src="./assets/images/project-gifs/bloom.gif" alt="">
-                    </div>
-                    <h3 class="font-color">bloom feedback</h3>
-                </div>
-                <div class="td-projects">
-                    <div class="td-img">
-                        <img class="td-img" src="./assets/images/project-gifs/clementines.gif" alt="">
-                    </div>
-                    <h3 class="font-color">clementines</h3>
-                </div>
-                <div class="td-projects">
-                    <div class="td-img">
-                        <img class="td-img" src="./assets/images/project-gifs/liquor-n-vinyl.gif" alt="">
-                    </div>
-                    <h3 class="font-color">vnyl</h3>
-                </div>
-            </div>
-        </div>  
     </div>
 </body>
 </html>
