--- a/video-work.html
+++ b/video-work.html
@@ -41,11 +41,15 @@
             <ul class="content-menu">
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link"><a class="link active font-color" href="/video-work.html">Video work</a></li>
+                    <li class="link"><a class="link active font-color" href="/video-work.html">VIDEOSS</a></li>
                 </div>
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
+                    <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">VISUALIZERS</a></li>
+                </div>
+                <div class="nav-link">
+                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                    <li class="link font-color"><a class="link font-color" href="/images.html">IMAGES</a></li>
                 </div>
             </ul>
 
@@ -66,115 +70,140 @@
             </ul>
         </div>
    </section>
-    <div id="content-top">
+
+    <!-- Page Body -->
+    <section id="content-top">
+        <!-- Mobile dash -->
         <div class="content-dashed-line mobile-only"></div>
-        <div class="mid-menu">
-            <div class="vid-menu-one">
-                <a href="video-work.html" class="sub-menu content-heading font-color vid-menu-active">Visualizers</a>
-            </div>
-            <div class="vid-menu-one ">
-                <a href="freelance.html" class="sub-menu content-heading font-color vid-menu-inactive">freelance</a>
-            </div>
-            <div class="vid-menu-one">
-                <a href="touchdesignr.html" class="sub-menu content-heading font-color vid-menu-inactive">touchdesigner proj</a>
-            </div>
-        </div>
-        <div class="content-dashed-line"></div>
-        <div id="content">
-            <div id="visualizers">
-                <h3 class="font-color">VIZS/MUSIC PAIRINGS</h3>
-                <div class="projects">
-                    <div class="video-img">
-                        <img class="proj-img" src="./assets/images/space-men.jpeg" alt="">
+
+        <!-- Page Content -->
+        <div id="video-collection">
+
+            <!-- Vizs Projects Block -->
+            <h2 class="section-heading font-color">VIZS/MUSIC PAIRINGS</h2>
+
+            <!-- Project 1 -->
+            <section class="projects">
+                <div>
+                    <img class="proj-img" src="./assets/images/space-men.jpeg" alt="">
+                </div>
+                <div class="title-container">
+                    <div class="title-runtime">
+                        <h4 class="proj-title">Space-Men</h4>
+                        <p class="sub-desc font-color">5 min. 2O23</p>
                     </div>
-                    <div class="title-container">
-                        <div class="title-runtime">
-                            <h4 class="proj-title">Space-Men</h4>
-                            <p class="sub-desc font-color">5 min. 2O23</p>
-                        </div>
-                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
-                        <div class="featured-track">
-                            <img class="music-icon" src="/assets/images/icons/music.png" alt="">
-                            <p class="font-color track-p">
-                                 The Delfonics Theme (How Could You) by The Delfonics
-                            </p>
-                        </div>
-                        <p class="font-color proj-desc">
-                            An astronaut tries to save his crewmembers from a failing ship in this remix of Space-Men (Assignment: Outer Space) from 1960, directed by Antonio Margheriti.
-                            <br>
-                            <br>
-                            Created using TouchDesigner.
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <div class="featured-track">
+                        <img class="music-icon" src="/assets/images/icons/music.png" alt="">
+                        <p class="font-color track-p">
+                                The Delfonics Theme (How Could You) by The Delfonics
                         </p>
                     </div>
-                </div>
-                <div class="projects">
-                    <div class="video-img">
-                        <img class="proj-img" src="./assets/images/santo.jpeg" alt="">
-                    </div>
-                    <div class="title-container">
-                        <div class="title-runtime">
-                            <h4 class="proj-title">El Santo</h4>
-                            <p class="sub-desc font-color">5 min. 2O23</p>
-                        </div>
-                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a></p>
-                        <div class="featured-track">
-                            <img class="music-icon" src="/assets/images/icons/music.png" alt="">
-                            <p class="font-color track-p">
-                                Party Machine by Bruce Haack
-                            </p>
-                        </div>
-                        <p class="font-color proj-desc">El Santo battles some of his biggest foes as they are mixed together with analog video feedback enveloping them in a technicolor lo-fi dreamscape.
-                            <br>
-                            <br>
-                        Footage was rescanned with a tape handycam, the output was plugged into a video mixer with a feedback of the same mixer being fed to itself as the B input. Using the built-in effects to morph the video results in a kaleidoscope of colors and violence.
+                    <p class="font-color proj-desc">
+                        An astronaut tries to save his crewmembers from a failing ship in this remix of Space-Men (Assignment: Outer Space) from 1960, directed by Antonio Margheriti.
+                        <br>
+                        <br>
+                        Created using TouchDesigner.
                     </p>
-                    </div>
                 </div>
-                <br>
-                <br>
-                <h3 class="font-color">SILENT MAGIC HOUR SERIES</h3>
-                <div class="projects">
-                    <div class="video-img">
-                        <img class="proj-img" src="./assets/images/wavy.jpeg" alt="">
-                    </div>
-                    <div class="title-container">
-                        <div class="title-runtime">
-                            <h4 class="proj-title">Wavy Silent Hour</h4>
-                            <p class="sub-desc font-color">1 hr. 2O23</p>
-                        </div>
-                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
-                        <br>
-                        <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
-                        <br>
-                        <br>
-                        Part of the silent hour series of visualizers, a BYOM (bring your own music) eye candy party.
-                        <br>
-                        <br>    
-                        Created using TouchDesigner.</p>
-                    </div>
+            </section>
+
+            <!-- Project 2 -->
+            <section class="projects">
+                <div class="video-img">
+                    <img class="proj-img" src="./assets/images/santo.jpeg" alt="">
                 </div>
-                <div class="projects">
-                    <div class="video-img">
-                        <img class="proj-img" src="./assets/images/frosty.png" alt="">
+                <div class="title-container">
+                    <div class="title-runtime">
+                        <h4 class="proj-title">El Santo</h4>
+                        <p class="sub-desc font-color">5 min. 2O23</p>
                     </div>
-                    <div class="title-container">
-                        <div class="title-runtime">
-                            <h4 class="proj-title">Frosty Silent Hour</h4>
-                            <p class="sub-desc font-color">1 hr. 2O23</p>
-                        </div>
-                        <p class="tube-watch"><a class="link font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a></p>
-                        <br>
-                        <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
-                        <br>
-                        <br>
-                        Part of the silent hour series of visualizers, a BYOM (bring your own music) eye candy party.
-                        <br>
-                        <br>    
-                        Created using TouchDesigner.</p>
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <div class="featured-track">
+                        <img class="music-icon" src="/assets/images/icons/music.png" alt="">
+                        <p class="font-color track-p">
+                            Party Machine by Bruce Haack
+                        </p>
                     </div>
+                    <p class="font-color proj-desc">El Santo battles some of his biggest foes as they are mixed together with analog video feedback enveloping them in a technicolor lo-fi dreamscape.
+                        <br>
+                        <br>
+                    Footage was rescanned with a tape handycam, the output was plugged into a video mixer with a feedback of the same mixer being fed to itself as the B input. Using the built-in effects to morph the video results in a kaleidoscope of colors and violence.
+                </p>
                 </div>
-            </div>
-        </div>  
-    </div>
+            </section>
+
+            <div class="dashed-line"></div>
+
+            <!-- Silent Hour Projects Block -->
+            <h2 class="section-heading font-color">SILENT MAGIC HOUR SERIES</h2>
+
+            <!-- Project 1 -->
+            <section class="projects">
+                <div class="video-img">
+                    <img class="proj-img" src="./assets/images/wavy.jpeg" alt="">
+                </div>
+                <div class="title-container">
+                    <div class="title-runtime">
+                        <h4 class="proj-title">Wavy Silent Hour</h4>
+                        <p class="sub-desc font-color">1 hr. 2O23</p>
+                    </div>
+                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
+                    <br>
+                    <p class="font-color proj-desc">Dreamy geometry radiates warm tones as ocean waves texture the spinning squares.
+                    <br>
+                    <br>
+                    Part of the silent hour series of visualizers, a BYOM (bring your own music) eye candy party.
+                    <br>
+                    <br>    
+                    Created using TouchDesigner.</p>
+                </div>
+            </section>
+
+            <!-- Project 2 -->
+            <section class="projects">
+                <div class="video-img">
+                    <img class="proj-img" src="./assets/images/frosty.png" alt="">
+                </div>
+                <div class="title-container">
+                    <div class="title-runtime">
+                        <h4 class="proj-title">Frosty Silent Hour</h4>
+                        <p class="sub-desc font-color">1 hr. 2O23</p>
+                    </div>
+                    <a class="link tube-watch font-color" href="https://youtu.be/2FxIPGvL-Io" target=”_blank”>Watch on YOUTUBE</a>
+                    <br>
+                    <p class="font-color proj-desc">Pulsating thrusts of white and blues, noise and blob shapes slowly gravitate upwards, shifting size and place.
+                    <br>
+                    <br>
+                    Part of the silent hour series of visualizers, a BYOM (bring your own music) eye candy party.
+                    <br>
+                    <br>    
+                    Created using TouchDesigner.</p>
+                </div>
+            </section>
+
+            <div class="dashed-line"></div>
+
+            <!-- Freelance -->
+            <h2 class="section-heading font-color">FREELANCE WORK</h2>
+
+            <!-- Project 1 -->
+            <section class="projects">
+                <div class="video-img">
+                    <img class="proj-img" src="./assets/images/pyramid-thieves.jpeg" alt="">
+                </div>
+                <div class="title-container">
+                    <div class="title-runtime">
+                        <h4 class="proj-title">Thunder by Pyramid Thieves</h4>
+                        <p class="sub-desc font-color">5 min. 2O19</p>
+                    </div>
+                    <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
+                    <br>
+                    <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. I was the Editor, Visual Effects artist, and Director for the project.
+                    </p>
+                </div>
+            </section>
+        </div> 
+    </section>
 </body>
 </html>
