--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@
         <div class="menu-options">
 
         <!-- Content menu -->
-            <ul class="content-menu">
-                <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link"><a class="link font-color" href="/video-work.html">Video work</a></li>
-                </div>
-                <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="/images.html">Images</a></li>
-                </div>
-            </ul>
+        <ul class="content-menu">
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link"><a class="link font-color" href="/video-work.html">VIDEOS</a></li>
+            </div>
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">VISUALIZERS</a></li>
+            </div>
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link font-color"><a class="link font-color" href="/images.html">IMAGES</a></li>
+            </div>
+        </ul>
 
         <!-- Social menu -->
             <ul class="social-menu">
