--- a/images.html
+++ b/images.html
@@ -41,15 +41,15 @@
         <ul class="content-menu">
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link"><a class="link font-color" href="/video-work.html">VIDEOS</a></li>
+                <li class="link"><a class="link font-color" href="/video-work.html">videos</a></li>
             </div>
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">VISUALIZERS</a></li>
+                <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">visualizers</a></li>
             </div>
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link font-color"><a class="link active font-color" href="/images.html">IMAGESS</a></li>
+                <li class="link active font-color"><a class="link font-color" href="/images.html">images</a></li>
             </div>
         </ul>
 
@@ -57,15 +57,15 @@
             <ul class="social-menu">
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
                 </div>
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
                 </div>
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>TikTok</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
                 </div>
             </ul>
         </div>
