--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- Navigation section -->
-   <section id="nav-section">
+   <section id="nav-section-landing">
 
     <!-- Logo section -->
         <div class="logo-section">
@@ -35,21 +35,21 @@
         <div class="dashed-line"></div>
 
     <!-- Menu -->
-        <div class="menu-options">
+    <div class="menu-options">
 
         <!-- Content menu -->
         <ul class="content-menu">
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link"><a class="link font-color" href="/video-work.html">VIDEOS</a></li>
+                <li class="link"><a class="link font-color" href="/video-work.html">videos</a></li>
             </div>
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">VISUALIZERS</a></li>
+                <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">visualizers</a></li>
             </div>
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link font-color"><a class="link font-color" href="/images.html">IMAGES</a></li>
+                <li class="link font-color"><a class="link font-color" href="/images.html">images</a></li>
             </div>
         </ul>
 
@@ -57,25 +57,32 @@
             <ul class="social-menu">
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
                 </div>
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
                 </div>
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>TikTok</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
                 </div>
             </ul>
         </div>
-   </section>
 
+        <!-- <div class="game-button">
+            <button class="font-color" onclick="beginGame()" type="button"> Play a game </button>
+        </div> -->
+
+        <div>
+            
+        </div>
+   </section>
 <!-- Page Body -->
     <section id="content-top">
-        <div class="landing">
+        <!-- <div class="landing">
             <img class="landing-img" src="./assets/images/project-gifs/video-game.gif" alt="square shapes flashing across the screen">
-        </div>
+        </div> -->
     </section>
 
     <script src="./scripts/script.js"></script>
