--- a/touchdesignr.html
+++ b/touchdesignr.html
@@ -38,34 +38,34 @@
         <div class="menu-options">
 
         <!-- Content menu -->
-            <ul class="content-menu">
-                <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link"><a class="link font-color" href="/video-work.html">VIDEOS</a></li>
-                </div>
-                <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link active font-color" href="/touchdesignr.html">VISUALIZERSS</a></li>
-                </div>
-                <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="/images.html">IMAGES</a></li>
-                </div>
-            </ul>
+        <ul class="content-menu">
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link"><a class="link font-color" href="/video-work.html">videos</a></li>
+            </div>
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link active font-color"><a class="link font-color" href="/touchdesignr.html">visualizers</a></li>
+            </div>
+            <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link font-color"><a class="link font-color" href="/images.html">images</a></li>
+            </div>
+        </ul>
 
         <!-- Social menu -->
             <ul class="social-menu">
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>Instagram</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
                 </div>
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>YouTube</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
                 </div>
                 <div class="nav-link">
                     <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>TikTok</a></li>
+                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
                 </div>
             </ul>
         </div>
