--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul class="content-menu">
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link"><a class="link font-color" href="/video-work.html">videos</a></li>
+                <li class="link"><a class="link font-color" href="/video-work.html">video projs</a></li>
             </div>
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
