--- a/index.html
+++ b/index.html
@@ -41,30 +41,27 @@
         <ul class="content-menu">
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link"><a class="link font-color" href="/video-work.html">video projs</a></li>
+                <li class="link font-color"><a class="link font-color" href="/video-work.html">video vizs</a></li>
             </div>
-            <div class="nav-link">
+            <!-- <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                 <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">visualizers</a></li>
-            </div>
+            </div> -->
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link font-color"><a class="link font-color" href="/images.html">images</a></li>
+                <li class="link font-color"><a class="link font-color" href="/images.html">pictures</a></li>
             </div>
         </ul>
 
         <!-- Social menu -->
             <ul class="social-menu">
                 <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                     <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
                 </div>
                 <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                     <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
                 </div>
                 <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                     <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
                 </div>
             </ul>
