--- a/video-work.html
+++ b/video-work.html
@@ -41,30 +41,31 @@
         <ul class="content-menu">
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link active font-color"><a class="link font-color" href="/video-work.html">videos</a></li>
+                <li class="link font-color"><a class="link font-color" href="/index.html">home</a></li>
             </div>
             <div class="nav-link">
+                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <li class="link active font-color"><a class="link font-color" href="/video-work.html">video vizs</a></li>
+            </div>
+            <!-- <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                 <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">visualizers</a></li>
-            </div>
+            </div> -->
             <div class="nav-link">
                 <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link font-color"><a class="link font-color" href="/images.html">images</a></li>
+                <li class="link font-color"><a class="link font-color" href="/images.html">pictures</a></li>
             </div>
         </ul>
 
         <!-- Social menu -->
             <ul class="social-menu">
                 <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                     <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
                 </div>
                 <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                     <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
                 </div>
                 <div class="nav-link">
-                    <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                     <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
                 </div>
             </ul>
@@ -203,7 +204,31 @@
                     </p>
                 </div>
             </section>
-            <br>
+            
+            <div class="dashed-line"></div>
+
+            <!-- Freelance -->
+            <h2 class="section-heading font-color">TOUCHDESIGNER CREATIONS</h2>
+
+            <!-- Project 1 -->
+            <section id="td-collection">
+                <div class="td-projects">
+                    <img class="td-img" src="./assets/images/project-gifs/black-river.gif" alt="">
+                    <h3 class="font-color">dark river</h3>
+                </div>
+                <div class="td-projects">
+                    <img class="td-img" src="./assets/images/project-gifs/bloom.gif" alt="">
+                    <h3 class="font-color">bloom feedback</h3>
+                </div>
+                <div class="td-projects">
+                    <img class="td-img" src="./assets/images/project-gifs/clementines.gif" alt="">
+                    <h3 class="font-color">clementines</h3>
+                </div>
+                <div class="td-projects">
+                    <img class="td-img" src="./assets/images/project-gifs/liquor-n-vinyl.gif" alt="">
+                    <h3 class="font-color">vnyl</h3>
+                </div>
+            </section>
         </div> 
     </section>
 </body>
