--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div class="logo-section">
             <a class="name font-color" href="index.html">WWWilfredooo HHHerreraaa</a>
             <p class="logo-subtitle font-color"> visuals maker</p>
-            <a href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt="radio icon"></a>
+            <a class="radio-link" href="https://www.mixcloud.com/fr_radio/" target=”_blank”><img class="radio-icon" src="/assets/images/icons/radio-icon.png" alt="radio icon"></a>
+            <p class="font-color radio-desc">fredonaut radio show</p>
         </div>
 
         <div class="dashed-line"></div>
@@ -40,15 +41,10 @@
         <!-- Content menu -->
         <ul class="content-menu">
             <div class="nav-link">
-                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
+                <!-- <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon"> -->
                 <li class="link font-color"><a class="link font-color" href="/video-work.html">video vizs</a></li>
             </div>
-            <!-- <div class="nav-link">
-                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
-                <li class="link font-color"><a class="link font-color" href="/touchdesignr.html">visualizers</a></li>
-            </div> -->
             <div class="nav-link">
-                <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon">
                 <li class="link font-color"><a class="link font-color" href="/images.html">pictures</a></li>
             </div>
         </ul>
