--- a/video-work.html
+++ b/video-work.html
@@ -40,13 +40,13 @@
         <!-- Content menu -->
         <ul class="content-menu">
             <div class="nav-link">
-                <li class="link font-color"><a class="link font-color" href="/index.html">home</a></li>
-            </div>
-            <div class="nav-link">
                 <li class="link active font-color"><a class="link font-color" href="/video-work.html">video vizs</a></li>
             </div>
             <div class="nav-link">
                 <li class="link font-color"><a class="link font-color" href="/images.html">pictures</a></li>
+            </div>
+            <div class="nav-link">
+                <a class="" href="/index.html"><img class="icon" src="/assets/images/icons/home.png" alt="home icon"></a>
             </div>
         </ul>
 
