--- a/images.html
+++ b/images.html
@@ -46,7 +46,7 @@
                 <li class="link active font-color"><a class="link font-color" href="/images.html">pictures</a></li>
             </div>
             <div class="nav-link">
-                <a class="" href="/index.html" target=”_blank”><img class="icon" src="/assets/images/icons/home.png" alt="home icon"></a>
+                <a class="" href="/index.html"><img class="icon" src="/assets/images/icons/home.png" alt="home icon"></a>
             </div>
         </ul>
 
