--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- Navigation section -->
-   <section id="nav-section-landing">
+   <section id="nav-section">
 
     <!-- Logo section -->
         <div class="logo-section">
