--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
                     <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
                 </div>
             </ul>
-        </div>
+    </div>
+
+        <section id="">
+            <label for="" id="menu-title" class="font-color">MENU</label>
+            <label for="" id="menu-option" class="font-color"><a class="font-color" href="">video vizs</a></label>
+            <label for="" id="menu-option"  class="font-color"><a class="font-color" href="">images</a></label>
+        </section>
 
         <!-- <div class="game-button">
             <button class="font-color" onclick="beginGame()" type="button"> Play a game </button>
