--- a/index.html
+++ b/index.html
@@ -35,52 +35,43 @@
         <div class="dashed-line"></div>
 
     <!-- Menu -->
-    <div class="menu-options">
+        <div class="menu-options">
 
-        <!-- Content menu -->
-        <ul class="content-menu">
-            <div class="nav-link">
-                <!-- <img class="arrow" src="/assets/images/icons/nav-arrow.svg" alt="arrow icon"> -->
-                <li class="link font-color"><a class="link font-color" href="/video-work.html">video vizs</a></li>
-            </div>
-            <div class="nav-link">
-                <li class="link font-color"><a class="link font-color" href="/images.html">pictures</a></li>
-            </div>
-        </ul>
+            <!-- Content menu -->
+            <section id="m3nu">
+                <label for="" id="menu-title" class="font-color">menu</label>
+                <a class="font-color" id="menu-option" href="/video-work.html"><label for=""></label>vizualizrs</label></a>
+                <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
+            </section>
 
-        <!-- Social menu -->
-            <ul class="social-menu">
-                <div class="nav-link">
-                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
-                </div>
-                <div class="nav-link">
-                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
-                </div>
-                <div class="nav-link">
-                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
-                </div>
-            </ul>
-    </div>
-
-        <section id="">
-            <label for="" id="menu-title" class="font-color">MENU</label>
-            <label for="" id="menu-option" class="font-color"><a class="font-color" href="">video vizs</a></label>
-            <label for="" id="menu-option"  class="font-color"><a class="font-color" href="">images</a></label>
-        </section>
+            <!-- Social menu -->
+            <section id="social-menu">
+                <a href=""><img src="/assets/images/icons/instagram.png" alt=""></a>
+                <a href=""><img src="/assets/images/icons/youtube.png" alt=""></a>
+                <a href=""><img src="/assets/images/icons/tiktok.png" alt=""></a>
+            </section>
+                <!-- <ul class="social-menu">
+                    <div class="nav-link">
+                        <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
+                    </div>
+                    <div class="nav-link">
+                        <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
+                    </div>
+                    <div class="nav-link">
+                        <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
+                    </div>
+                </ul> -->
+        </div>
 
         <!-- <div class="game-button">
             <button class="font-color" onclick="beginGame()" type="button"> Play a game </button>
         </div> -->
 
-        <div>
-            
-        </div>
    </section>
+
+
 <!-- Page Body -->
     <section id="content-top">
-        <!-- <div class="landing">
-            <img class="landing-img" src="./assets/images/project-gifs/video-game.gif" alt="square shapes flashing across the screen">
-        </div> -->
     </section>
 
     <script src="./scripts/script.js"></script>
