--- a/video-work.html
+++ b/video-work.html
@@ -34,34 +34,33 @@
 
         <div class="dashed-line"></div>
 
-    <!-- Menu -->
-    <div class="menu-options">
+        <!-- Menu -->
+        <div class="menu-options">
 
-        <!-- Content menu -->
-        <ul class="content-menu">
-            <div class="nav-link">
-                <li class="link active font-color"><a class="link font-color" href="/video-work.html">video vizs</a></li>
-            </div>
-            <div class="nav-link">
-                <li class="link font-color"><a class="link font-color" href="/images.html">pictures</a></li>
-            </div>
-            <div class="nav-link">
-                <a class="" href="/index.html"><img class="icon" src="/assets/images/icons/home.png" alt="home icon"></a>
-            </div>
-        </ul>
+            <!-- Content menu -->
+            <section id="m3nu">
+                <label for="" id="menu-title" class="font-color">menu</label>
+                <a class="font-color active" id="menu-option" href="/video-work.html"><label for=""></label>vizualizrs</label></a>
+                <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
+            </section>
 
-        <!-- Social menu -->
-            <ul class="social-menu">
-                <div class="nav-link">
-                    <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
-                </div>
-                <div class="nav-link">
-                    <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
-                </div>
-                <div class="nav-link">
-                    <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
-                </div>
-            </ul>
+            <!-- Social menu -->
+            <section id="social-menu">
+                <a href=""><img src="/assets/images/icons/instagram.png" alt=""></a>
+                <a href=""><img src="/assets/images/icons/youtube.png" alt=""></a>
+                <a href=""><img src="/assets/images/icons/tiktok.png" alt=""></a>
+            </section>
+                <!-- <ul class="social-menu">
+                    <div class="nav-link">
+                        <li class="link font-color"><a class="link font-color" href="https://www.instagram.com/bebofrik/" target=”_blank”>instagram</a></li>
+                    </div>
+                    <div class="nav-link">
+                        <li class="link font-color"><a class="link font-color" href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target=”_blank”>youtube</a></li>
+                    </div>
+                    <div class="nav-link">
+                        <li class="link font-color"><a class="link font-color" href="https://www.tiktok.com/@bebofrik" target=”_blank”>tiktok</a></li>
+                    </div>
+                </ul> -->
         </div>
    </section>
 
