--- a/video-work.html
+++ b/video-work.html
@@ -46,9 +46,9 @@
 
             <!-- Social menu -->
             <section id="social-menu">
-                <a href=""><img src="/assets/images/icons/instagram.png" alt=""></a>
-                <a href=""><img src="/assets/images/icons/youtube.png" alt=""></a>
-                <a href=""><img src="/assets/images/icons/tiktok.png" alt=""></a>
+                <a href="https://www.instagram.com/bebofrik/"><img src="/assets/images/icons/instagram.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA"><img src="/assets/images/icons/youtube.png" alt=""></a>
+                <a href="https://www.tiktok.com/@bebofrik"><img src="/assets/images/icons/tiktok.png" alt=""></a>
             </section>
                 <!-- <ul class="social-menu">
                     <div class="nav-link">
