--- a/video-work.html
+++ b/video-work.html
@@ -192,7 +192,7 @@
                     </div>
                     <a class="link tube-watch font-color" href="https://youtu.be/Xj0EtyL7fVw" target=”_blank”>Watch on YOUTUBE</a>
                     <br>
-                    <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. I was the Editor, Visual Effects artist, and Director for the project.
+                    <p class="font-color proj-desc">Music video for the song Thunder by Boston-based band Pyramid Thieves. Served as visual effects artist, editor, and director for the project.
                     </p>
                 </div>
             </section>
