--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
         <div class="dashed-line"></div>
 
     <!-- Artist description -->
-        <div id="about-me">
-            <p class="font-color">Welcome to the digital archive of projects made by wilfredo (pronounced <i>wil-freh-doh</i>). These works were created using different digital and analog mediums exploring image distortion, looped movements, and music/visualizer pairings.
-                    <br>
-                    <br>
-            Fredo hails from the beautiful island of Puerto Rico. Currently based out of New York, his focus is in digital/analog video manipulation, generative art, and web development.</p>
-        </div>
+        <section class="about-portfolio">
+            <p class="font-color">Digital repository of works created using a mix of analog and digital formats exploring image distortion, abstract forms, looped movements,  surreal landscapes, and interactive interfaces.</p>
+        </section>
+
+        <div class="dashed-line"></div>
+
+
+        <section class="about-me">
+            <h2 class="menu-title font-color">about fredo</h2>
+            <p class="font-color">He hails from the beautiful island of Puerto Rico. Currently based out of New York City, his focus is in digital/analog video manipulation, generative art, and web development.</p>
+        </section>
 
         <div class="dashed-line"></div>
 
@@ -39,7 +44,7 @@
 
             <!-- Content menu -->
             <section id="m3nu">
-                <label for="" id="menu-title" class="font-color">menu</label>
+                <label for="" class="menu-title font-color">menu</label>
                 <a class="font-color" id="menu-option" href="/video-work.html"><label for=""></label>vizualizrs</label></a>
                 <a class="font-color" id="menu-option" href="/images.html"><label for=""></label>images</label></a>
             </section>
